2005-10-31  Tom Tromey  <tromey@redhat.com>

	* model/import.hh (model_import::get_simple_name): Now virtual.
	(model_static_import_single::get_simple_name): New method.

2005-10-31  Tom Tromey  <tromey@redhat.com>

	* model/wildcard.cc (apply_type_map): New method.
	* model/wildcard.hh (model_wildcard::apply_type_map): Declare.
	* model/method.cc (return_type_substitutable_p): Correctly apply
	unchecked conversion.
	* conversions.cc (widen_instantiation): Use capture_conversion.
	* conversions.hh (capture_conversion): Fixed.

2005-10-31  Tom Tromey  <tromey@redhat.com>

	* model/wildcard.cc (get_pretty_name): New method.
	* model/wildcard.hh (model_wildcard::get_pretty_name): No longer
	inline.

2005-10-28  Tom Tromey  <tromey@redhat.com>

	* model/classinst.cc (apply_type_map): Updated for new
	model_parameters iterator methods.
	(get_signature_map_fragment): Likewise.
	(get_pretty_name): New method.
	* model/classinst.hh (model_class_instance::get_pretty_name):
	Declare.
	* model/class.hh (model_class::get_pretty_name): Now virtual.

2005-10-27  Tom Tromey  <tromey@redhat.com>

	* model/wildcard.cc (contains_p): New method.
	* model/wildcard.hh (model_wildcard::contains_p): Declare.
	* conversions.hh (capture_conversion): Declare.
	* conversions.cc (capture_conversion): New function.
	(widen_instantiation): Likewise.
	(widening_reference_conversion): Use widen_instantiation.
	* model/class.hh (model_class::create_instance): Changed return
	type.
	(model_class::contains_p): Declare.
	* model/class.cc (create_instance): Updated.
	(contains_p): New method.

2005-10-27  Tom Tromey  <tromey@redhat.com>

	* model/parameters.cc (create_type_map): Added assert.
	* model/classref.cc (resolve): Correctly use boxing_conversion.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* compiler.cc (compiler): Default to 1.4 language.
	* model/classref.cc (resolve): Use correct type for generic
	class.

2005-10-26  Tom Tromey  <tromey@redhat.com>
